added information about board type, controller refactor, changes into request criteria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port:8080
 # Datasource
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/holidays
+#spring.datasource.username=${NAS_DB_USERNAME}
 spring.datasource.username=postgres
+#spring.datasource.password=${NAS_DB_PASSWORD}
 spring.datasource.password=a
 # Logging
 logging.level.root=INFO
