added logging responses to file added presentation layer in excel (export from db to excel)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 # Default port on localhost
 server.port:8080
+
 # Datasource
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/holidays
-#spring.datasource.username=${NAS_DB_USERNAME}
-spring.datasource.username=postgres
-#spring.datasource.password=${NAS_DB_PASSWORD}
-spring.datasource.password=a
+spring.datasource.url=${holidays_datasource_url}
+spring.datasource.username=${holidays_db_username}
+spring.datasource.password=${holidays_db_password}
+# Holiday Settings
+# api response log
+travel.directory=\\MyApps\\Travel-Searcher
+travel.filename=response_api
+travel.extension=log
+
 # Logging
 logging.level.root=INFO
+
 #SQL logging
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.show-sql=false
+
 #to avoid createClob() method threw error : java.lang.reflect.InvocationTargetException
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
