pom.xml standarization, mail notification service implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,18 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${holidays_datasource_url}
 spring.datasource.username=${holidays_db_username}
 spring.datasource.password=${holidays_db_password}
+
 # Holiday Settings
 # api response log
 travel.directory=\\MyApps\\Travel-Searcher
 travel.filename=response_api
 travel.extension=log
+# notification sender settings
+mail.smtp=smtp.gmail.com
+mail.login=${mail_username}.dev
+mail.password=${mail_password}
+mail.sender=${mail_username}.dev@gmail.com
+mail.receiver=${mail_username}@gmail.com
 
 # Logging
 logging.level.root=INFO
