modified notification recipients list creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ travel.filename=response_api
 travel.extension=log
 # notification sender settings
 mail.smtp=smtp.gmail.com
-mail.login=${mail_username}.dev
+mail.smtp.port=587
+mail.login=${mail_username}
 mail.password=${mail_password}
-mail.sender=${mail_username}.dev@gmail.com
-mail.receiver=${mail_username}@gmail.com
+mail.sender=${mail_username}@gmail.com
 
 # Logging
 logging.level.root=INFO
