WORKING ON NEW FUNCTIONALITY REQUEST SEARCH CRITERIA SIMPLIFICATION + REQUESTOR + MANY MORE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,5 @@ spring.jpa.hibernate.show-sql=false
 
 #to avoid createClob() method threw error : java.lang.reflect.InvocationTargetException
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
